package example;

option java_package = "org.deephacks.westty.example";
option java_outer_classname = "DeleteMessages";


message DeleteRequest {
  optional uint32 protoType = 200;
  required string name = 1;
}

message DeleteResponse {
  optional uint32 protoType = 201;
  required string msg = 1;
}